# starling

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
ci/: before_install.sh  script.sh
src/: error.rs  future_ext.rs  gc_roots.rs  js_global.rs  js_native.rs  lib.rs  promise_future_glue.rs  promise_tracker.rs  task.rs
tests/: tests.rs
tests/js/: child-outlives-parent-error.js  child-outlives-parent.js  empty-main.js  main-returns-promise-that-gets-reclaimed-by-gc.js  many-unhandled-rejected-promises.js  micro-tasks-delayed-error-handled.js  micro-tasks-flushed-on-main-error.js  micro-tasks-flushed-on-top-level-error.js  ordering.js  parent-does-not-handle-child-error.js  simple-exit-0.js  simple-exit-1.js  simple-micro-tasks-error.js  simple-micro-tasks.js  spawn-and-wait.js  spawn-bad-file.js  spawn-task-that-errors.js  stay-alive-forever.js  task-resolves.js  timeout-0.js  timeout-1.js  timeout-2.js  timeout-3.js  timeout-4.js
tests/js/spawn-and-wait/: 0.js  1.js  10.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
tests/js/task-resolves/: function.js  number.js  object.js  string.js  symbol-for.js  symbol.js  undefined.js
