[package]
authors = ["The Starling Project Developers"]
description = "The Starling JavaScript runtime."
license = "Apache-2.0"
name = "starling"
version = "0.1.0"

[[bin]]
doc = false
name = "starling"
path = "src/bin/starling.rs"
required-features = ["clap"]

[build-dependencies]
glob = "0.2.11"

[dependencies]
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
futures = "0.1.15"
futures-cpupool = "0.1.6"
lazy_static = "0.2.8"
num_cpus = "1.6.2"
state_machine_future = "0.1.1"
tokio-core = "0.1.9"
tokio-timer = "0.1.2"
void = "1.0.2"

[dependencies.backtrace]
features = ["cpp_demangle"]
version = "0.3.2"

[dependencies.clap]
optional = true
version = "2.26.0"

[dependencies.js]
branch = "smup-smup-smup"
git = "https://github.com/fitzgen/mozjs"

[features]
debugmozjs = ["js/debugmozjs"]
default = ["clap"]

[patch.crates-io]
# If you need to temporarily test Starling with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
